# inspect_ec2_sandbox

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
empty_package/: README.md
infra/: .env.test  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml
infra/ec2sandboxinfra/: __init__.py  ec2sandbox_stack.py
src/ec2sandbox/: __init__.py  _ec2_sandbox_environment.py  _instance_provider.py  _unpack_tags.py  schema.py
src/ec2sandbox/examples/: __init__.py  where_am_i.py
tests/ec2sandboxtest/: helpers.py  test_cleanup.py  test_cleanup_unit.py  test_create_instance.py  test_eval.py  test_from_settings.py  test_instance_provider.py  test_provider_registration.py  test_sandbox_self_check.py  test_schema.py  test_unpack_tags.py
tests/ec2sandboxtest/integration/: conftest.py  test_cleanup_behaviour.py  test_eval_cleanup_on_setup_failure.py
