[project]
name = "inspect-ec2-sandbox"
version = "0.1.0"
description = "An EC2 Sandbox Environment for Inspect"
readme = "README.md"
authors = [
    {name = "UK AI Security Institute"}
]
requires-python = ">=3.10"
dependencies = [
    "tenacity>=9.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-extra-types>=2.10.2",
    "inspect_ai>=0.3.79",
    "rich>=13.9",
    "platformdirs>=4.3.7",
    "boto3>=1.35.0",
    "websocket-client>=1.8.0",
    "pydantic-settings>=2.10.1",
]

[project.entry-points."inspect_ai"]
"ec2-sandbox" = "ec2sandbox._ec2_sandbox_environment"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["tests"]
testpaths = ["tests/**/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ec2sandbox"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # flake8
  "D",   # pydocstyle
  "I",   # isort
]
ignore = [
  "D212",  # multi-line-summary-first-line
]

[tool.ruff.lint.per-file-ignores]
# Rationale: public objects in the tests and experimental dirs don't form part of the 
# package so drop the requirement for docstrings.
"tests/*" = ["D10"]  # undocumented-(public|magic)-*
"src/ec2sandbox/experimental/*" = ["D10"]  # undocumented-(public|magic)-*

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
plugins = "pydantic.mypy"
packages = ["ec2sandbox", "tests.ec2sandboxtest"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.3",
]
